# ghostscript_dart

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/windows/: .gitignore  CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: ghostscript_dart.dart  ghostscript_dart_bindings_generated.dart  gs_iapi.dart
lib/src/: abstraction.dart  exception.dart  gs_iapi.dart  isolate.dart  isolate_messages.dart  models.dart
src/: CMakeLists.txt  ghostscript_dart.c  ghostscript_dart.h
src/cmake/: FindGhostscript.cmake
windows/: CMakeLists.txt
